# ghi

./: .cirrus.yml  .pylintrc  README.md  pyproject.toml  setup.cfg
ghi/: __init__.py  cli.py  config.py  graphql.py  gui.py  query.graphql
ghi/gui/: __init__.py  button_link.py  details.py  ghi_listbox.py  grid.py  issues.py  issues_and_pull_requests.py  pull_requests.py  repo_list.py  utils.py  window.py
