[metadata]
name = ghi
version = 0.0.1
author = Ellen Marie Dash
author_email = me@duckie.co
description = Manage GitHub issues/PRs less awkwardly.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/ghi
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.5

setup_requires =
    pytest-runner
    twine
    wheel
    distutils_twine~=3.0

tests_require =
    ghi[linting,testing]

[options.extras_require]
linting =
    flake8~=3.5
    flake8-bugbear
    flake8-commas
    flake8-docstrings
    pylint

testing =
    pytest-flake8
    pytest-pylint
    pytest

[options.entry_points]
console_scripts =
    ghi = ghi.gui:main

[bdist]
bdist-base = build/bdist

[clean]
build-base = build
build-lib  = build/lib
bdist-base = build/bdist
all = True

[flake8]
select = C,E,F,W,B,B9
ignore = E221
max-complexity = 7
max-line-length = 80
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    venv
